# PracticaSpring2022

Resources/: mainwindow.ui  resources.qrc
Sources/Algorithms/: Algorithms.cpp  Algorithms.h
Sources/ImageProcessingApp/: CMakeLists.txt  main.cpp
Sources/Interface/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
Sources/Utils/: CMakeLists.txt  Utils.cpp  Utils.h
